--- a/weatherapp/src/App.css
+++ b/weatherapp/src/App.css
@@ -11,6 +11,11 @@
   width: 95%;
   height: 95%;
   background-color: #AABAEE;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding: 10px;
 }
 
 @media (max-width: 360px) {
